# datateal

./: .editorconfig  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
.github/instructions/: control-plane.instructions.md  orchestrator.instructions.md  runtime.instructions.md  ui.instructions.md
src/: Datateal.slnx  Directory.Build.props  Directory.Packages.props  DuckHouse.slnx
src/app-host/Datateal.AppHost/: AppHost.cs  Datateal.AppHost.csproj
src/app-host/DuckHouse.AppHost/: AppHost.cs  DuckHouse.AppHost.csproj
src/control-plane/: AGENTS.md  CLAUDE.md  Directory.Packages.props  DuckHouse.ControlPlane.slnx  README.md
src/control-plane/.aspire/: settings.json
src/control-plane/Datateal.ControlPlane/: Program.cs  (+3 more)
src/control-plane/Datateal.ControlPlane.Application/: Datateal.ControlPlane.Application.csproj  ServiceExtensions.cs
src/infra/: main.bicep  main.bicepparam
src/orchestrator/: AGENTS.md  CLAUDE.md  README.md
src/runtime/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  pyproject.toml
src/runtime/datateal_runtime/: main.py
src/runtime/datateal_runtime/api/: kernels.py
src/runtime/datateal_runtime/kernels/: dataframe_formatter.py  manager.py
src/runtime/docker/: entrypoint.sh
src/runtime/duckhouse_runtime/: main.py
src/runtime/duckhouse_runtime/api/: auth.py  kernels.py
src/runtime/duckhouse_runtime/kernels/: dataframe_formatter.py  manager.py  models.py
src/runtime/tests/: test_language_features.py
src/ui/: AGENTS.md  CLAUDE.md  README.md
(+991 files in other folders)
