[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duckhouse-runtime"
version = "2026.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0.0",
  "jupyter-client>=8.0.0",
  "ipykernel>=6.0.0",
  "jedi>=0.19.0",
  "pyflakes>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["duckhouse_runtime*"]

[project.scripts]
duckhouse-runtime = "duckhouse_runtime.main:run"